tests/snapshots/run_wpt_conformance__coreml_gelu_float32_1D_tensor.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "gelu.https.any.js",
    "gelu float32 1D tensor",
    "coreml",
    "PASS",
)
