tests/snapshots/run_wpt_conformance__coreml_gelu_float32_4D_tensor.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "gelu.https.any.js",
    "gelu float32 4D tensor",
    "coreml",
    "PASS",
)
