tests/snapshots/run_wpt_conformance__coreml_gemm_both_negative_options_alpha_and_2nd_float32_input_tensor.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
gemm.https.any.js gemm both negative options.alpha and 2nd float32 input tensor, coreml
 gemm :: gemm both negative options.alpha and 2nd float32 input tensor: index 0: actual=400642.25 expected=400725.03 ulp=2649 tolerance=10
  inputs: inputA: [82.98884582519531, 90.51641082763672, 59.638519287109375, 36.271873474121094, 18.9648494720459, 43.89479446411133, 98.89488220214844, 91.46013641357422, 50.51683807373047, 40.45679473876953, 50.76741409301758, 9.336554527282717]; inputB: [-64.35197448730469, -87.64981079101563, -96.04495239257813, -31.07155990600586, -6.548067092895508, -64.64146423339844, -14.02061653137207, -88.93306732177734, -24.17941093444824, -97.31866455078124, -93.4608154296875, -39.49039459228515, -94.37982177734376, -75.83335876464844, -11.403324127197266, -26.2825927734375, -56.237979888916016, -46.47404861450195, -89.20684051513672, -53.495323181152344] (constant); inputC: [82.77201843261719, 91.3852081298828, 12.651897430419922, 20.12200355529785, 68.51224517822266, 35.202415466308594, 13.33466625213623, 50.78546905517578, 88.61195373535156, 30.577470779418945, 69.47061920166016, 7.166217803955078, 28.337108612060547, 90.69412231445313, 71.23025512695313] (constant)
  expected gemmOutput: [400725.03, 292635.75, 527642.4, 283236.4, 270787.4, 355130.97, 256121.42, 436658.06, 391465.4, 235557.03 ...] (len=15)
  actual gemmOutput: [400642.25, 292544.34, 527629.7, 283216.28, 270718.9, 355095.78, 256108.1, 436607.28, 391376.78, 235526.45 ...] (len=15)
  expected gemmOutput full nd:
[400725.03, 292635.75, 527642.4, 283236.4, 270787.4, 355130.97, 256121.42, 436658.06, 391465.4, 235557.03, ...] (len=15, shape=[3, 5])
  actual gemmOutput full nd:
[400642.25, 292544.34, 527629.7, 283216.28, 270718.9, 355095.78, 256108.1, 436607.28, 391376.78, 235526.45, ...] (len=15, shape=[3, 5])

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    inputA: f32[3, 4];
  }

  consts {
    operand_1: f32[4, 5] @bytes([54, 180, 128, 194, 180, 76, 175, 194, 4, 23, 192, 194, 142, 146, 248, 193, 196, 137, 209, 192, 110, 72, 129, 194, 114, 84, 96, 193, 187, 221, 177, 194, 111, 111, 193, 193, 40, 163, 194, 194, 240, 235, 186, 194, 42, 246, 29, 194, 120, 194, 188, 194, 174, 170, 151, 194, 4, 116, 54, 193, 192, 66, 210, 193, 177, 243, 96, 194, 109, 229, 57, 194, 231, 105, 178, 194, 54, 251, 85, 194]);
    operand_2: f32[3, 5] @bytes([70, 139, 165, 66, 58, 197, 182, 66, 44, 110, 74, 65, 221, 249, 160, 65, 69, 6, 137, 66, 70, 207, 12, 66, 203, 90, 85, 65, 82, 36, 75, 66, 82, 57, 177, 66, 169, 158, 244, 65, 245, 240, 138, 66, 168, 81, 229, 64, 102, 178, 226, 65, 100, 99, 181, 66, 228, 117, 142, 66]);
  }

  nodes {
    [gemmOutput] = gemm(inputA, operand_1, aTranspose=false, alpha=-22.611149749186296, bTranspose=false, beta=1.0, c=2, label="");
  }

  outputs { gemmOutput; }
}
