tests/snapshots/run_wpt_conformance__coreml_gemm_float16_input_tensors_with_both_negative_options_alpha_and_options_beta.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
gemm.https.any.js gemm float16 input tensors with both negative options.alpha and options.beta, coreml
 Failed to build graph: coreml runtime failed: MLModel load failed: Failed to build the model execution plan using a model architecture file '<coreml-temp-model>' with error code: -5.

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    inputA: f16[3, 4];
  }

  consts {
    operand_1: f16[4, 5] @bytes([65, 57, 214, 49, 232, 56, 160, 49, 118, 58, 130, 55, 190, 56, 61, 46, 162, 57, 178, 50, 164, 59, 188, 57, 164, 59, 239, 56, 74, 55, 33, 58, 153, 57, 167, 56, 227, 55, 54, 57]);
    operand_2: f16[3, 5] @bytes([106, 54, 205, 57, 178, 53, 140, 43, 241, 49, 100, 59, 42, 44, 110, 49, 125, 59, 89, 37, 127, 52, 142, 58, 27, 52, 141, 41, 34, 51]);
  }

  nodes {
    [gemmOutput] = gemm(inputA, operand_1, aTranspose=false, alpha=-22.611149749186296, bTranspose=false, beta=-11.68521964935509, c=2, label="");
  }

  outputs { gemmOutput; }
}
